welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: identifier expected but integer literal found.
  var pos :Int=-1
                ^